<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:text="@string/center"
        android:textColor="#f00f1d"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/tvCenter"
        android:layout_toLeftOf="@id/tvCenter"
        android:padding="10dp"
        android:text="@string/left"
        android:textColor="#0bf4d2"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/tvCenter"
        android:layout_toRightOf="@id/tvCenter"
        android:padding="10dp"
        android:text="@string/right"
        android:textColor="#0bf4d2"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvCenter"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/above"
        android:textColor="#ff00c2"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCenter"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/bottom"
        android:textColor="#ff00c2"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/firstCorner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:text="@string/corneru"
        android:textColor="#ed00ff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstCorner"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:padding="10dp"
        android:text="@string/below"
        android:textColor="#ed00ff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/firstCorner"
        android:layout_toRightOf="@id/firstCorner"
        android:padding="10dp"
        android:text="@string/right"
        android:textColor="#ed00ff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lastCorner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:text="@string/cornerf"
        android:textColor="#ed00ff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/lastCorner"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:text="@string/above"
        android:textColor="#ed00ff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/lastCorner"
        android:layout_toLeftOf="@id/lastCorner"
        android:padding="10dp"
        android:text="@string/left"
        android:textColor="#ed00ff"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>